--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -56,7 +56,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n"
+    "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
+    "def number_of_destinations():\n",
+    "    return len(travel_destinations)"
    ]
   },
   {
