--- a/index.ipynb
+++ b/index.ipynb
@@ -57,8 +57,8 @@
    "outputs": [],
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
-    "def travel_destinations():\n",
-    "    "
+    "def number_of_destinations():\n",
+    "    len(travel_desit)"
    ]
   },
   {
