--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -52,27 +52,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def number_of_destinations():\n",
-    "    return len(travel_destinations) "
+    "    len(travel_destinations)\n",
+    "    return "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "6"
+       "['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -90,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -109,7 +110,7 @@
        "'argentina'"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -121,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -130,7 +131,7 @@
        "'finland'"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -154,7 +155,9 @@
    "outputs": [],
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
-    "def favorite_destination()\n"
+    "def favorite_destination():\n",
+    "    travel_destinations.append('madagascar')\n",
+    "    return travel_destinations(-1)\n"
    ]
   },
   {
