--- a/index.ipynb
+++ b/index.ipynb
@@ -188,22 +188,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-23-c70093d6a2a9>, line 2)",
+     "evalue": "invalid syntax (<ipython-input-25-ad9fd703a408>, line 2)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-23-c70093d6a2a9>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    favorite_destination():\u001b[0m\n\u001b[0m                           ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-25-ad9fd703a408>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    favorite_destination():.append('madagascar')\u001b[0m\n\u001b[0m                           ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
-    "favorite_destination():\n",
-    "travel_destinations[-1] # 'madagascar'"
+    "favorite_destination():.append('madagascar')"
    ]
   },
   {
