Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -188,21 +188,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-25-ad9fd703a408>, line 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-25-ad9fd703a408>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    favorite_destination():.append('madagascar')\u001b[0m\n\u001b[0m                           ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
+     "data": {
+      "text/plain": [
+       "'madagascar'"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
-    "favorite_destination():.append('madagascar')"
+    "favorite_destination()\n",
+    "travel_destinations[-1]"
    ]
   },
   {
@@ -219,11 +222,8 @@
    "outputs": [],
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
-    "def capitalize_countries():\n",
-    "    capitalize_countries = []\n",
-    "    for destination in travel_destinations:\n",
-    "        travel_destinations.append(destination.title())\n",
-    "    return capitalize_countries\n",
+    "def capitalized countries():\n",
+    "    travel_destin\n",
     "    "
    ]
   },
