Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -223,7 +223,8 @@
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalized_countries():\n",
-    "    travel_destinations.title\n",
+    "    capitalized_countries= []\n",
+    "    for desti\n",
     "    return travel_destinations"
    ]
   },
